feat(devops): add Redis caching layer to VLAB deployment
- Add Redis as Helm dependency using Bitnami chart v18.0.0
- Configure Redis replication for production/staging environments
- Configure Redis standalone for test environments
- Add Redis tags to all environment values files
- Include comprehensive Redis setup documentation
- Enable Prometheus metrics and monitoring
- Configure appropriate resource limits per environment
- Add network policies and security contexts for production

Architecture:
- Production/Staging: Master + 1 Replica with authentication
- Test/Online-Test: Standalone without authentication
- All environments: Persistent storage with SSD
- Monitoring: Prometheus metrics enabled

This provides a robust caching layer that can handle node failures
in the multi-node K8s environment while maintaining acceptable
downtime for cache operations.

--- a/devops/values/online-test.yaml
+++ b/devops/values/online-test.yaml
@@ -1,6 +1,7 @@
 tags:
   kafka: false
   cockroach: true
+  redis: true
   backup: false
 
 kafkabrokers: &kb "kafka-headless.default.svc.cluster.local:29092"
@@ -342,3 +343,39 @@ cockroachdb:
     persistentVolume:
       size: 5Gi
       storageClass: "pd-ssd"
+
+redis:
+  enabled: true
+  architecture: standalone
+  auth:
+    enabled: false
+  master:
+    persistence:
+      enabled: true
+      size: 1Gi
+      storageClass: "pd-ssd"
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 50m
+      limits:
+        memory: 128Mi
+        cpu: 100m
+    podAnnotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "6379"
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      interval: 30s
+  networkPolicy:
+    enabled: false
+  podSecurityContext:
+    enabled: true
+    fsGroup: 1001
+    runAsUser: 1001
+  containerSecurityContext:
+    enabled: true
+    runAsUser: 1001
+    runAsNonRoot: true
