--- a/devops/vlab/Chart.yaml
+++ b/devops/vlab/Chart.yaml
@@ -77,3 +77,10 @@ dependencies:
     condition: kafka.enabled
     tags:
       - kafka
+
+  - name: redis
+    version: 18.0.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
+    tags:
+      - redis
