--- a/botserver/package.json
+++ b/botserver/package.json
@@ -12,10 +12,17 @@
     "node-rdkafka": "^2.10.0"
   },
   "devDependencies": {
-    "eslint": "^7.7.0"
+    "eslint": "^7.7.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^3.4.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --colors server/handlers.test.js",
     "start": "node server/index.js",
     "lint": "eslint ."
   },
