--- a/devops/values/test.yaml
+++ b/devops/values/test.yaml
@@ -20,15 +20,15 @@ kafkabrokers: &kb fly-kafka:9092
 botEnvs: &botenvs bot-envs
 chatbaseHost: &host db-cockroachdb-public
 
-
-versionDashboard: &vdashboard v0.0.35
-versionBotserver: &vbotserver v0.0.10
-versionReplybot: &vreplybot v0.0.152
+versionDashboard: &vdashboard v0.0.37
+versionBotserver: &vbotserver v0.0.11
+versionReplybot: &vreplybot v0.0.168
 versionLinksniffer: &vlinksniffer v0.0.4
-versionDean: &vdean v0.0.30
-versionScribble: &vscribble v0.0.25
-versionDinersclub: &vdinersclub v0.0.34
-versionFormcentral: &vformcentral v0.0.11
+versionDean: &vdean v0.0.37
+versionScribble: &vscribble v0.0.27
+versionDinersclub: &vdinersclub v0.0.38
+versionFormcentral: &vformcentral v0.0.12
+versionExporter: &vexporter v0.3.6
 
 linksniffer:
   replicaCount: 1
@@ -223,6 +223,12 @@ replybot:
     value: "http://fly-botserver"
   - name: FORMCENTRAL_URL
     value: "http://fly-formcentral"
+  - name: REDIS_HOST
+    value: "gbv-redis-master"
+  - name: REDIS_PORT
+    value: "6379"
+  - name: REDIS_DB
+    value: "0"
 
 botserver:
   replicaCount: 1
