--- a/moviehouse/netlify.toml
+++ b/moviehouse/netlify.toml
@@ -1,6 +1,6 @@
 [context.production.environment]
 APP_ID="699455733740842"
-SERVER_URL="https://gbvbot.nandan.cloud/synthetic"
+SERVER_URL="https://fly-botserver.vlab.digital/synthetic"
 
 [context.staging.environment]
 APP_ID="790352681363186"
