--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -20,7 +20,7 @@ exporterTopic: &exportertopic "vlab-exports"
 
 versionDashboard: &vdashboard v0.0.37
 versionBotserver: &vbotserver v0.0.11
-versionReplybot: &vreplybot v0.0.176
+versionReplybot: &vreplybot v0.0.177
 versionLinksniffer: &vlinksniffer v0.0.4
 versionDean: &vdean v0.0.38
 versionScribble: &vscribble v0.0.27
@@ -176,7 +176,7 @@ dean:
   - name: DEAN_SEND_DELAY
     value: "3s"
   - name: DEAN_FOLLOWUP_MIN
-    value: "6 hours"
+    value: "12 hours"
   - name: DEAN_FOLLOWUP_MAX
     value: "24 hours"
   - name: DEAN_TIMEOUT_BLACKLIST
@@ -260,7 +260,7 @@ scribble:
       - name: SCRIBBLE_BATCH_SIZE
         value: "128"
       - name: SCRIBBLE_STRICT_MODE
-        value: "true"
+        value: "false"
     - destination: "responses"
       replicaCount: 1
       env:
